--- a/estiloso.css
+++ b/estiloso.css
@@ -20,7 +20,8 @@ body {
     margin-left: 120px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    grid-template-columns: repeat(7, 1fr);
 }
 .carta {
     width: 117px;
@@ -31,25 +32,42 @@ body {
     background-color: #A7E9AF;
     border-radius: 5px;
     border: 1px solid #99CEA8;
+    transition: all 0.4s;
     position: relative; 
-    transition: all 0.5s; 
+    transform-style: preserve-3d;
+}
+.virada {
+    transform: rotateY(180deg);
+  }
+.acertou {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
+.face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    position: relative; 
+}
 .piriquito {
     width: 100px;
     height: 100px;
     position: absolute;
-    top: 24px; 
+    top: 24px;
     right: 10px;
+}
+.verso {
     backface-visibility: hidden;
 }
-.escondido {
-    display: none; 
+.frente {
+    transform:rotateY(-180deg); 
+    backface-visibility: hidden;
 }
 
-.face {
-    transform: rotateY(180deg);
+h1 {
+    color: #A7E9AF;
 }
+
 
 
 @media (max-width: 560px) {
