--- a/estiloso.css
+++ b/estiloso.css
@@ -40,14 +40,15 @@ body {
     transform: rotateY(180deg);
   }
 .acertou {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(24, 70, 48, 0.5);
+    z-index: 2;
 }
 
 .face {
     width: 100%;
     height: 100%;
     position: absolute;
-    position: relative; 
+    position: relative;
 }
 .piriquito {
     width: 100px;
@@ -55,6 +56,7 @@ body {
     position: absolute;
     top: 24px;
     right: 10px;
+    z-index: 1;
 }
 .verso {
     backface-visibility: hidden;
@@ -66,6 +68,7 @@ body {
 
 h1 {
     color: #A7E9AF;
+    opacity: 0;
 }
 
 
